# learn-gui

./: .env.example  .env.host.example  .env.remote.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  brainstorm.md  cameras.json  dextop-node.service  index.html  mediamtx.yml  package-lock.json  package.json  playwright.config.ts  project.md  repro.json  requirements.txt  telemetry-console.service  vite.config.ts
.cursor/plans/: web-viz.plan.md
.cursor/rules/: snapshot-assets.mdc  web-viz-plan-process.mdc
client/: layout-concept.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  config.ts
docs/: aiortc.md  infra.md  make_clean.md  mjpeg_streaming.md  mjpeg_webrtc.md  sdk_design.md  test.md  thor_streaming.md  webrtc_comparision.md  webrtc_encoding.md
docs/plans/: 2026-02-27-elp-mjpeg-streaming-design.md
external_dependencies/: README.md
scripts/: camera_service.sh  check_camera_live_gui.mjs  check_camera_live_webrtc.py  dev.sh  dev_host.sh  dev_remote.sh  dextop_service.sh  diagnose_webrtc.py  find_cameras.py  lint.sh  mjpeg_debug.py  mjpeg_elp.py  run_rerun_demo.py  run_robot.py  save_mjpeg.py  save_webrtc.py  setup.sh  setup_remote.sh
server/: data_log.py  main.py  pyproject.toml  rerun_bridge.py  robot_env.py  schemas.py  webrtc.py
server/telemetry_console/: __init__.py  camera.py  cli.py  env.py  gui_api.py  recorder.py  replay.py  schemas.py  viewer.py  webrtc_sessions.py  webrtc_track.py  zmq_channels.py
src/: App.css  App.test.tsx  App.tsx  index.css  repro.ts
tests/: repro.spec.ts  verify-replay.spec.ts
tests/client/: App.test.tsx  VideoPanel.test.tsx  VideoTile.test.tsx  useWebRTC.test.tsx
tests/integration/: camera-snapshot.spec.ts  playwright.config.ts
tests/server/: conftest.py  test_camera_deps.py  test_camera_module.py  (+19 more)
(+13 files in other folders)
