[project]
name = "learn-gui-server"
version = "0.1.0"
requires-python = "==3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiortc",
    "rerun-sdk",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["../tests/server"]
