[project]
name = "learn-gui-server"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiortc",
    "opencv-python",
    "rerun-sdk",
    "pydantic",
    "depthai",
    "dexmate_urdf",
    "zarr",
    "numcodecs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["../tests/server"]
